# ERAV4-Session2

./: README.md  app.py  pyproject.toml  wsgi.py
Session 2 Code/: 1-hello_ai_world.py  2-python_basics.py  3-data_structures.py  4-using_modules.py  5-numpy_basics.py  my_math_module.py
Session 2 Code/web_development/ai_web_development/: index.html  script.js
static/: app.js  style.css  styles.css
templates/: index.html
